<resources>
    <string name="app_name">CashSafe</string>

    <string name="valor">Valor da Despesa (R$)</string>
    <string name="valor2">Valor da Receita (R$)</string>
    <string name="data">Data de Vencimento (Dia/Mês/Ano)</string>
    <string name="data2">Data de Recebimento (Dia/Mês/Ano)</string>
    <string name="descricao">Descrição da Despesa</string>
    <string name="descricao2">Descrição da Receita</string>
    <string name="metodoPagamento">Forma de Pagamento: </string>
    <string name="pago">Está Pago?</string>
    <string name="receita">Recebeu?</string>
    <string name="fixa">Despesa Fixa?</string>
    <string name="inicial">Tela inicial</string>
    <string name="fixa2">Receita Fixa?</string>
    <string name="repetir">Repetir na Data (Dia/Mês/Ano)</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="balanco">Balanço Mensal</string>
    <string name="saldo">Saldo</string>
    <string name="receitabalanco">Receitas</string>
    <string name="despesa">Despesas</string>
    <string name="dinheiro">R$ 100,00</string>
    <string name="receitascategoria">Receitas por Categoria</string>
    <string name="despesascategoria">Despesas por Categoria</string>
    <string name="select">Selecione uma Categoria</string>
    <string name="total">Total</string>

    <string name="lista_padrao">Selecione Categoria</string>
    <string-array name="lista">
        <item>Alimentação</item>
        <item>Lazer</item>
        <item>Aluguel</item>
        <item>Energia</item>
        <item>Telefone</item>
        <item>Gasolina</item>
        <item>Roupas</item>
        <item>Água</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receita">ReceitaActivity</string>
    <string name="title_activity_despesa">DespesaActivity</string>
    <string name="title_activity_despesas_por_categoria">DespesasPorCategoriaActivity</string>
    <string name="title_activity_despesas_categoria">DespesasCategoriaActivity</string>
    <string name="title_activity_balanco_mensal">BalancoMensalActivity</string>
    <string name="title_activity_receita_categoria">ReceitaCategoriaActivity</string>
    <string name="title_activity_balanco">BalancoActivity</string>
    <string name="title_activity_editar_receita">EditarReceitaActivity</string>
    <string name="title_activity_editar_despesa">EditarDespesaActivity</string>
    <string name="title_activity_categorias">CategoriasActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_editar_categoria_despesa">EditarCategoriaDespesaActivity</string>
    <string name="title_activity_editar_categoria_receita">EditarCategoriaReceitaActivity</string>
</resources>
