<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cashsafe.cashsafe.DespesaActivity"
    android:background="@color/red">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:layout_weight="0.10"
        />

    <EditText
        android:id="@+id/etxt_fromdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:hint="@string/data" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_weight="0.30"
        android:hint="@string/descricao"
        android:layout_below="@+id/etxt_fromdate"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select"
        android:id="@+id/spinner"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pago"
        android:id="@+id/checkBox"
        android:layout_weight="0.10"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fixa"
        android:id="@+id/checkBox2"
        android:layout_weight="0.10" />

    <EditText
        android:id="@+id/etxt_fromdate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:hint="@string/repetir"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="96dp"
            android:layout_height="50dp"
            android:text="@string/okay"
            android:id="@+id/buttonOkay"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="79dp" />

        <Button
            android:layout_width="96dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="79dp"
            android:onClick="cancelar"/>

    </LinearLayout>


</LinearLayout>
