<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.cashsafe.cashsafe.atividades.ReceitaActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="5dp">

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/editar_valor_despesa"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor2"
            />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/editar_data_despesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/data2" />

        <EditText
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editar_descricao_despesa"
            android:hint="@string/descricao2" />

        <Spinner

            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/categorias_despesa"/>

        <Spinner
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/metodos_pagamento"/>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salvar"

                android:id="@+id/buttonOkay"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="79dp"
                android:onClick="salvar"/>

            <Button
                android:layout_width="150dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/buttonCancel"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="79dp"
                android:onClick="cancelar"/>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>