<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cashsafe.cashsafe.PrincipalActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/space2" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/space3" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/space" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/space4" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_above="@+id/space4"
    android:layout_below="@+id/space"
    android:layout_toRightOf="@+id/space3"
    android:layout_toStartOf="@+id/space2">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:background="@color/silver"
        android:onClick="balancoMensal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/balanco"
            android:id="@+id/textView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/saldo"
                android:textColor="@color/darkgreen"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/receitabalanco"
                android:textColor="@color/blue"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/despesa"
                android:textColor="@color/red"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dinheiro"
                android:textColor="@color/blue"
                android:id="@+id/textView5"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dinheiro"
                android:textColor="@color/darkgreen"
                android:id="@+id/textView6"
                android:layout_above="@+id/textView5"
                android:layout_alignStart="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dinheiro"
                android:textColor="@color/red"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView5"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>


    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:background="@color/silver"
        android:onClick="receitasPorCategoria">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/receitascategoria"
            android:id="@+id/textView8"
            android:layout_gravity="left|top" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical">


        </RelativeLayout>
    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:background="@color/silver"
        android:onClick="despesasPorCategoria">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/despesascategoria"
            android:id="@+id/textView9"
            android:layout_gravity="left|top" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical">


        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12">

        <Button
            android:id="@+id/botaoreceita"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:text="+"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:onClick="cadastroReceita"/>

        <Button
            android:id="@+id/botaodespesa"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button2"
            android:text="-"
            android:textSize="10pt"
            android:textColor="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignTop="@+id/botaoreceita"
            android:layout_alignParentStart="true"
            android:onClick="cadastroDespesa"/>

    </RelativeLayout>

</LinearLayout>
</RelativeLayout>